--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -303,9 +303,9 @@
 	.row.uniform {
 		margin: -50px 0 -1px -50px;
 	}
-
+	<!--/*100 0 0 100*/ -->
 	.row.\32 00\25 > * {
-		padding: 100px 0 0 100px;
+		padding: 15px 0 0 100px;
 	}
 
 	.row.\32 00\25 {
