--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -305,7 +305,8 @@
 	}
 	<!--/*100 0 0 100*/ -->
 	.row.\32 00\25 > * {
-		padding: 15px 0 0 100px;
+		/* padding: 15px 0 0 100px; */
+		padding: 30px 0 0 150px;
 	}
 
 	.row.\32 00\25 {
@@ -417,7 +418,8 @@
 	}
 
 	.\34 u, .\34 u\24 {
-		width: 33.3333333333%;
+		/* width: 33.3333333333%; */
+		width: 25%;
 		clear: none;
 		margin-left: 0;
 	}
@@ -485,6 +487,7 @@
 
 	.\-4u {
 		margin-left: 33.33333%;
+		
 	}
 
 	.\-3u {
